[package]
name = "async-graphql-viz"
version = "0.1.5"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "async-graphql for viz"
homepage = "https://github.com/viz-rs/async-graphql-viz"
repository = "https://github.com/viz-rs/async-graphql-viz"
keywords = ["futures", "async", "graphql", "viz"]
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[features]
cbor = ["serde_cbor"]

[dependencies]
viz-core = { version = "0.1.2", features = ["ws"] }
viz-utils = { version = "0.1.2" }

async-graphql = "2.11"
mime = "0.3"
tempfile = "3.2"

serde_cbor = { version = "0.11", optional = true }
